Require group/lookup/unpackBuckets in trySbeRestricted-eligible prefix

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Execution
    • Fully Compatible
    • ALL
    • Hide
      const c = db.c;
      c.drop();
      c.insert({a: 1});
      jsTestLog(c.explain().aggregate([{$limit: 1}, {$match: {x: 20}}]))
      // this uses SBE
      
      Show
      const c = db.c; c.drop(); c.insert({a: 1}); jsTestLog(c.explain().aggregate([{$limit: 1}, {$match: {x: 20}}])) // this uses SBE
    • QE 2026-03-30, QE 2026-03-16, QE 2026-04-13
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      $limit - $match uses SBE when 'featureFlagSbeNonLeadingMatch' is enabled, when the expected behavior is that pipelines with non-leading matches should only use SBE if the pipeline before the $match is SBE eligible (contains a $group or $lookup)

            Assignee:
            Evan Bergeron
            Reporter:
            Matt Boros
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: