SERVER-120707 Require group/lookup/unpackBuckets in trySbeRestricted-eligible prefix (#49592)

GitOrigin-RevId: 282ac32a6fbdb608c8981e9139caa73295726031